--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,8 @@ services:
         entrypoint: []
         volumes:
             - .:/app
-        command: pytest --forked -n auto --timeout=120 /app/test -v
+        command: bash -c "
+                  pytest --forked -n auto --timeout=120 /app/test/cpp -v
+                  && pytest --forked -n auto --timeout=120 /app/test/python -v"
 
 
