--- a/resources/data_collectors/gpu03.yml
+++ b/resources/data_collectors/gpu03.yml
@@ -10,14 +10,8 @@ services:
         command: >
             bash -c "cd scripts && python collect_n_send_game_data.py
             --host http://10.180.39.13
-            --port 8080
-            --new_games_per_step 45
-            --max_parallel_processes 9
-            --max_parallel_threads 5
-            --n_buffer_executors 6
-            --model_execution_buffer_timeout 0.001
-            --min_model_buffer_size 4
-            --visible_gpu_index 0"
+            --max_parallel_processes 8
+            --min_states_to_send 1"
 
 
 
@@ -31,12 +25,6 @@ services:
         command: >
             bash -c "cd scripts && python collect_n_send_game_data.py
             --host http://10.180.39.13
-            --port 8080
-            --new_games_per_step 45
-            --max_parallel_processes 9
-            --max_parallel_threads 5
-            --n_buffer_executors 6
-            --model_execution_buffer_timeout 0.001
-            --min_model_buffer_size 4
-            --visible_gpu_index 1"
+            --max_parallel_processes 8
+            --min_states_to_send 1"
 
