--- a/resources/data_collectors/ws01.yml
+++ b/resources/data_collectors/ws01.yml
@@ -8,14 +8,8 @@ services:
         command: >
             bash -c "cd scripts && python collect_n_send_game_data.py
             --host http://10.180.39.13
-            --port 8080
-            --new_games_per_step 640
-            --max_parallel_processes 64
-            --max_parallel_threads 10
-            --n_buffer_executors 16
-            --model_execution_buffer_timeout 0.001
-            --min_model_buffer_size 8
-            --visible_gpu_index 0"
+            --max_parallel_processes 32
+            --min_states_to_send 1"
         deploy:
           resources:
             reservations:
@@ -33,14 +27,8 @@ services:
         command: >
             bash -c "cd scripts && python collect_n_send_game_data.py
             --host http://10.180.39.13
-            --port 8080
-            --new_games_per_step 640
-            --max_parallel_processes 64
-            --max_parallel_threads 10
-            --n_buffer_executors 16
-            --model_execution_buffer_timeout 0.001
-            --min_model_buffer_size 8
-            --visible_gpu_index 1"
+            --max_parallel_processes 32
+            --min_states_to_send 1"
         deploy:
           resources:
             reservations:
