--- a/resources/data_collectors/ws03.yml
+++ b/resources/data_collectors/ws03.yml
@@ -8,14 +8,8 @@ services:
         command: >
             bash -c "cd scripts && python collect_n_send_game_data.py
             --host http://10.180.39.13
-            --port 8080
-            --new_games_per_step 45
-            --max_parallel_processes 9
-            --max_parallel_threads 5
-            --n_buffer_executors 9
-            --model_execution_buffer_timeout 0.001
-            --min_model_buffer_size 4
-            --visible_gpu_index 0"
+            --max_parallel_processes 16
+            --min_states_to_send 1"
         deploy:
           resources:
             reservations:
@@ -34,14 +28,8 @@ services:
         command: >
             bash -c "cd scripts && python collect_n_send_game_data.py
             --host http://10.180.39.13
-            --port 8080
-            --new_games_per_step 45
-            --max_parallel_processes 9
-            --max_parallel_threads 5
-            --n_buffer_executors 9
-            --model_execution_buffer_timeout 0.001
-            --min_model_buffer_size 4
-            --visible_gpu_index 1"
+            --max_parallel_processes 16
+            --min_states_to_send 1"
         deploy:
           resources:
             reservations:
