--- a/resources/data_collectors/ws03.yml
+++ b/resources/data_collectors/ws03.yml
@@ -1,9 +1,9 @@
 version: '2.3'
 services:
     data_collector0:
-        build: ../
+        build: ../../
         volumes:
-            - ../:/app
+            - ../../:/app
         network_mode: host
         command: >
             bash -c "cd scripts && python collect_n_send_game_data.py
@@ -21,9 +21,9 @@ services:
 
 
     data_collector1:
-        build: ../
+        build: ../../
         volumes:
-            - ../:/app
+            - ../../:/app
         network_mode: host
         command: >
             bash -c "cd scripts && python collect_n_send_game_data.py
