--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,7 +1,7 @@
 {
  "log": {
   "projectname": "jass-muzero",
-  "entity": "andrinbuerli",
+  "entity": "andrinburli",
   "group": "AlphaZero-Experiment-0"
  },
  "agent": {
