--- a/resources/data_collectors/hs01.yml
+++ b/resources/data_collectors/hs01.yml
@@ -7,7 +7,7 @@ services:
         network_mode: host
         command: >
             bash -c "cd scripts && python collect_n_send_game_data.py
-            --host http://localhost
+            --host http://10.180.39.13
             --max_parallel_processes 20
             --min_states_to_send 1"
 
