--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,6 +1,6 @@
 {
  "log": {
-  "projectname": "jass-muzero",
+  "projectname": "jass-mu-zero",
   "entity": "andrinburli",
   "group": "AlphaZero-Experiment-0"
  },
@@ -27,7 +27,7 @@
   "data_folder": "../results",
   "learning_rate": 0.0001,
   "max_buffer_size": 2048,
-  "min_buffer_size": 512,
+  "min_buffer_size": 128,
   "port": 8080,
   "store_model_weights_after": 10,
   "trajectory_length": 5,
