--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -2,7 +2,7 @@
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
-  "group": "AlphaZero-Experiment-0"
+  "group": "MuZero-MCTS-Experiment-0"
  },
  "agent": {
   "c_1": 1,
@@ -23,15 +23,15 @@
   "adam_beta1": 0.9,
   "adam_beta2": 0.999,
   "adam_epsilon": 1e-07,
-  "batch_size": 512,
+  "batch_size": 1024,
   "data_folder": "../results",
   "learning_rate": 0.0001,
-  "max_buffer_size": 2048,
-  "min_buffer_size": 12,
+  "max_buffer_size": 4096,
+  "min_buffer_size": 1024,
   "port": 8080,
   "store_model_weights_after": 10,
   "trajectory_length": 5,
-  "updates_per_step": 8,
+  "updates_per_step": 16,
   "iterations": 1000000,
   "weight_decay": 0.0001
  },
