--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -23,11 +23,14 @@
   "adam_beta1": 0.9,
   "adam_beta2": 0.999,
   "adam_epsilon": 1e-07,
-  "batch_size": 1024,
+  "batch_size": 512,
   "data_folder": "../results",
+  "value_loss_weight": 0.25,
+  "reward_loss_weight": 1.0,
+  "policy_loss_weight": 1.0,
   "learning_rate": 0.0001,
-  "max_buffer_size": 20000,
-  "min_buffer_size": 1024,
+  "max_buffer_size": 4096,
+  "min_buffer_size": 512,
   "port": 8080,
   "store_model_weights_after": 10,
   "trajectory_length": 5,
