--- a/scripts/settings-debug.json
+++ b/scripts/settings-debug.json
@@ -25,6 +25,9 @@
   "adam_epsilon": 1e-07,
   "batch_size": 2,
   "data_folder": "../results",
+  "value_loss_weight": 0.25,
+  "reward_loss_weight": 1.0,
+  "policy_loss_weight": 1.0,
   "learning_rate": 0.0001,
   "max_buffer_size": 1024,
   "min_buffer_size": 4,
@@ -47,7 +50,9 @@
    256
   ],
   "feature_extractor": "cnn-full",
-  "num_blocks": 2,
+  "num_blocks_representation": 2,
+  "num_blocks_dynamics": 2,
+  "num_blocks_prediction": 1,
   "num_channels": 256,
   "observation_shape": [
    4,
