--- a/resources/data_collectors/ws01.yaml
+++ b/resources/data_collectors/ws01.yaml
@@ -1,1 +1,39 @@
+version: '2.3'
+services:
+    data_collector0:
+        build: ../../
+        volumes:
+            - ../../:/app
+        network_mode: host
+        command: >
+            bash -c "cd scripts && python collect_n_send_game_data.py
+            --host http://10.180.39.13
+            --max_parallel_processes 7
+            --min_states_to_send 1"
+        deploy:
+          resources:
+            reservations:
+              devices:
+                - driver: nvidia
+                  device_ids: ['0']
+                  capabilities: [gpu]
 
+
+
+    data_collector1:
+        build: ../../
+        volumes:
+            - ../../:/app
+        network_mode: host
+        command: >
+            bash -c "cd scripts && python collect_n_send_game_data.py
+            --host http://10.180.39.13
+            --max_parallel_processes 7
+            --min_states_to_send 1"
+        deploy:
+          resources:
+            reservations:
+              devices:
+                - driver: nvidia
+                  device_ids: ['1']
+                  capabilities: [gpu]
