--- a/resources/data_collectors/ws01.yaml
+++ b/resources/data_collectors/ws01.yaml
@@ -4,19 +4,14 @@ services:
         build: ../../
         volumes:
             - ../../:/app
+        environment:
+            - NVIDIA_VISIBLE_DEVICES=0
         network_mode: host
         command: >
             bash -c "cd scripts && python collect_n_send_game_data.py
             --host http://10.180.39.13
             --max_parallel_processes 7
             --min_states_to_send 1"
-        deploy:
-          resources:
-            reservations:
-              devices:
-                - driver: nvidia
-                  device_ids: ['0']
-                  capabilities: [gpu]
 
 
 
@@ -24,16 +19,11 @@ services:
         build: ../../
         volumes:
             - ../../:/app
+        environment:
+            - NVIDIA_VISIBLE_DEVICES=1
         network_mode: host
         command: >
             bash -c "cd scripts && python collect_n_send_game_data.py
             --host http://10.180.39.13
             --max_parallel_processes 7
             --min_states_to_send 1"
-        deploy:
-          resources:
-            reservations:
-              devices:
-                - driver: nvidia
-                  device_ids: ['1']
-                  capabilities: [gpu]
