--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -29,14 +29,15 @@
   "reward_loss_weight": 1.0,
   "policy_loss_weight": 1.0,
   "learning_rate": 0.0001,
-  "max_buffer_size": 4096,
-  "min_buffer_size": 2048,
+  "max_buffer_size": 40000,
+  "min_buffer_size": 20000,
   "port": 8080,
   "store_model_weights_after": 10,
   "trajectory_length": 5,
   "updates_per_step": 16,
   "iterations": 1000000,
-  "weight_decay": 0.0001
+  "weight_decay": 0.0001,
+  "store_buffer": true
  },
  "network": {
   "action_space_size": 43,
