--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -37,7 +37,8 @@
   "updates_per_step": 16,
   "iterations": 1000000,
   "weight_decay": 0.0001,
-  "store_buffer": true
+  "store_buffer": true,
+  "log_n_steps_ahead": 10
  },
  "network": {
   "action_space_size": 43,
