enable mdp value

--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -9,9 +9,9 @@
   "c_2": 19652,
   "dirichlet_alpha": 0.3,
   "dirichlet_eps": 0.25,
-  "discount": 1,
   "iterations": 20,
-  "mdp_value": false,
+  "mdp_value": true,
+  "discount": 1,
   "n_search_threads": 4,
   "port": 9999,
   "temperature": 1.0,
