--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,4 +1,5 @@
 {
+ "timestamp": 1647530979,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
@@ -29,16 +30,16 @@
   "reward_loss_weight": 1.0,
   "policy_loss_weight": 1.0,
   "learning_rate": 0.0001,
-  "max_buffer_size": 10000,
-  "min_buffer_size": 1000,
+  "max_buffer_size": 20000,
+  "min_buffer_size": 10000,
   "port": 8080,
   "store_model_weights_after": 10,
-  "trajectory_length": 5,
+  "trajectory_length": 10,
   "updates_per_step": 16,
   "iterations": 1000000,
   "weight_decay": 0.0001,
   "store_buffer": true,
-  "log_n_steps_ahead": 10
+  "log_n_steps_ahead": 15
  },
  "network": {
   "action_space_size": 43,
@@ -53,7 +54,9 @@
   ],
   "feature_extractor": "cnn-full-cheating",
   "num_blocks_representation": 2,
-  "num_blocks_dynamics": 2,
+  "fcn_blocks_representation": 1,
+  "num_blocks_dynamics": 3,
+  "fcn_blocks_dynamics": 2,
   "num_blocks_prediction": 1,
   "num_channels": 256,
   "path": null,
