--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,4 +1,5 @@
 {
+ "timestamp": 1647553650,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
@@ -34,11 +35,12 @@
   "port": 8080,
   "store_model_weights_after": 10,
   "trajectory_length": 10,
-  "updates_per_step": 16,
+  "updates_per_step": 32,
   "iterations": 1000000,
   "weight_decay": 0.0001,
   "store_buffer": true,
-  "log_n_steps_ahead": 15
+  "log_n_steps_ahead": 15,
+  "apa_n_games": 32
  },
  "network": {
   "action_space_size": 43,
