--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -21,7 +21,7 @@
   "virtual_loss": 10
  },
  "optimization": {
-  "optimizer": "sgd",
+  "optimizer": "adam",
   "learning_rate": 0.01,
   "adam_beta1": 0.9,
   "adam_beta2": 0.999,
