--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,4 +1,5 @@
 {
+ "timestamp": 1648129645,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
@@ -34,8 +35,8 @@
   "min_buffer_size": 20000,
   "port": 8080,
   "store_model_weights_after": 10,
-  "max_trajectory_length": 5,
-  "min_trajectory_length": 5,
+  "max_trajectory_length": 10,
+  "min_trajectory_length": 10,
   "updates_per_step": 16,
   "iterations": 1000000,
   "weight_decay": 0.0001,
@@ -46,19 +47,19 @@
  "network": {
   "action_space_size": 43,
   "fc_policy_layers": [
-   256, 256, 256
+   256
   ],
   "fc_reward_layers": [
-   256, 256, 256
+   256
   ],
   "fc_value_layers": [
-   256, 256, 256
+   256
   ],
   "feature_extractor": "cnn-full-cheating",
-  "num_blocks_representation": 4,
-  "fcn_blocks_representation": 2,
-  "num_blocks_dynamics": 4,
-  "fcn_blocks_dynamics": 2,
+  "num_blocks_representation": 8,
+  "fcn_blocks_representation": 4,
+  "num_blocks_dynamics": 8,
+  "fcn_blocks_dynamics": 4,
   "num_blocks_prediction": 1,
   "num_channels": 128,
   "path": null,
