--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,5 +1,4 @@
 {
- "timestamp": 1648651789,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
@@ -10,7 +9,7 @@
   "c_2": 19652,
   "dirichlet_alpha": 0.3,
   "dirichlet_eps": 0.25,
-  "iterations": 50,
+  "iterations": 20,
   "mdp_value": true,
   "discount": 1,
   "n_search_threads": 1,
@@ -55,7 +54,7 @@
   "fc_value_layers": [
    256, 256, 256
   ],
-  "feature_extractor": "cnn-full-cheating",
+  "feature_extractor": "cnn-full",
   "num_blocks_representation": 4,
   "fcn_blocks_representation": 2,
   "num_blocks_dynamics": 4,
