--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,4 +1,5 @@
 {
+ "timestamp": 1648760404,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
@@ -21,7 +22,7 @@
  },
  "optimization": {
   "optimizer": "adam",
-  "learning_rate": 0.001,
+  "learning_rate": 0.0001,
   "adam_beta1": 0.9,
   "adam_beta2": 0.999,
   "adam_epsilon": 1e-07,
@@ -30,8 +31,8 @@
   "value_loss_weight": 0.05,
   "reward_loss_weight": 0.25,
   "policy_loss_weight": 1.0,
-  "max_buffer_size": 60000,
-  "min_buffer_size": 60000,
+  "max_buffer_size": 40000,
+  "min_buffer_size": 40000,
   "port": 8080,
   "store_model_weights_after": 10,
   "max_trajectory_length": 10,
