--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -31,7 +31,7 @@
   "value_loss_weight": 0.05,
   "reward_loss_weight": 0.25,
   "policy_loss_weight": 1.0,
-  "valid_policy_target": true,
+  "valid_policy_target": false,
   "max_buffer_size": 80000,
   "min_buffer_size": 80000,
   "max_samples_per_episode": 240,
