--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -33,6 +33,7 @@
   "policy_loss_weight": 1.0,
   "valid_policy_target": false,
   "use_per": false,
+  "mask_private": true,
   "max_buffer_size": 20000,
   "min_buffer_size": 20000,
   "max_samples_per_episode": 512,
