--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -28,12 +28,13 @@
   "adam_epsilon": 1e-07,
   "batch_size": 128,
   "data_folder": "../results",
-  "value_loss_weight": 0.25,
-  "reward_loss_weight": 1.0,
-  "policy_loss_weight": 1.0,
+  "value_loss_weight": 1.0,
+  "reward_loss_weight": 0.0,
+  "policy_loss_weight": 0.0,
   "valid_policy_target": false,
   "use_per": false,
-  "mask_private": true,
+  "mask_private": false,
+  "mask_valid": true,
   "max_buffer_size": 20000,
   "min_buffer_size": 20000,
   "max_samples_per_episode": 512,
