--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -21,7 +21,7 @@
   "type": "mu-zero-mcts"
  },
  "optimization": {
-  "optimizer": "adam",
+  "optimizer": "sgd",
   "learning_rate": 0.001,
   "adam_beta1": 0.9,
   "adam_beta2": 0.999,
@@ -53,26 +53,26 @@
  "network": {
   "action_space_size": 43,
   "fc_policy_layers": [
-   512, 512, 512
+   256, 256, 256
   ],
   "fc_reward_layers": [
-   512, 512, 512
+   256, 256, 256
   ],
   "fc_value_layers": [
-   512, 512, 512
+   256, 256, 256
   ],
   "feature_extractor": "cnn-full",
   "num_blocks_representation": 4,
   "fcn_blocks_representation": 2,
   "num_blocks_dynamics": 4,
   "fcn_blocks_dynamics": 2,
-  "num_blocks_prediction": 0,
-  "num_channels": 256,
+  "num_blocks_prediction": 1,
+  "num_channels": 128,
   "path": null,
   "players": 4,
-  "reduced_channels_policy": 128,
-  "reduced_channels_reward": 128,
-  "reduced_channels_value": 128,
+  "reduced_channels_policy": 64,
+  "reduced_channels_reward": 64,
+  "reduced_channels_value": 64,
   "support_size": 157,
   "type": "resnet"
  }
