--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -21,9 +21,9 @@
   "type": "mu-zero-mcts"
  },
  "optimization": {
-  "optimizer": "adam",
-  "learning_rate": 0.01,
-  "adam_beta1": 0.9,
+  "optimizer": "sgd",
+  "learning_rate": 0.001,
+  "adam_beta1": 0.5,
   "adam_beta2": 0.999,
   "adam_epsilon": 1e-07,
   "batch_size": 256,
