--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -31,6 +31,7 @@
   "value_loss_weight": 1.0,
   "reward_loss_weight": 1.0,
   "policy_loss_weight": 1.0,
+  "grad_clip_norm": 3.0,
   "valid_policy_target": false,
   "use_per": false,
   "mask_private": false,
