--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,5 +1,5 @@
 {
- "timestamp": 1649334860,
+ "timestamp": 1649334850,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
@@ -33,11 +33,11 @@
   "policy_loss_weight": 1.0,
   "grad_clip_norm": 1.0,
   "valid_policy_target": false,
-  "use_per": false,
+  "use_per": true,
   "mask_private": false,
   "mask_valid": true,
-  "max_buffer_size": 20000,
-  "min_buffer_size": 20000,
+  "max_buffer_size": 80000,
+  "min_buffer_size": 80000,
   "max_samples_per_episode": 512,
   "min_non_zero_prob_samples": 10000,
   "port": 8080,
