--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,5 +1,5 @@
 {
- "timestamp": 1649334850,
+ "timestamp": 1649334860,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
@@ -22,7 +22,7 @@
  },
  "optimization": {
   "optimizer": "adam",
-  "learning_rate": 0.00005,
+  "learning_rate": 0.001,
   "adam_beta1": 0.9,
   "adam_beta2": 0.999,
   "adam_epsilon": 1e-07,
@@ -32,12 +32,12 @@
   "reward_loss_weight": 4.0,
   "policy_loss_weight": 1.0,
   "valid_policy_target": false,
-  "use_per": true,
+  "use_per": false,
   "mask_private": false,
-  "mask_valid": true,
-  "max_buffer_size": 80000,
-  "min_buffer_size": 80000,
-  "max_samples_per_episode": 512,
+  "mask_valid": false,
+  "max_buffer_size": 20000,
+  "min_buffer_size": 20000,
+  "max_samples_per_episode": 1024,
   "min_non_zero_prob_samples": 10000,
   "port": 8080,
   "store_model_weights_after": 10,
