--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -30,6 +30,7 @@
   "data_folder": "../results",
   "value_loss_weight": 0.2,
   "reward_loss_weight": 4.0,
+  "player_loss_weight": 4.0,
   "policy_loss_weight": 1.0,
   "valid_policy_target": false,
   "use_per": false,
@@ -52,7 +53,10 @@
  },
  "network": {
   "action_space_size": 43,
-  "fc_policy_layers": [
+  "fc_player_layers": [
+   256
+  ],
+  "policy_layers": [
    256, 256, 256
   ],
   "fc_reward_layers": [
