--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -22,7 +22,7 @@
  },
  "optimization": {
   "optimizer": "adam",
-  "learning_rate": 0.00005,
+  "learning_rate": 0.001,
   "adam_beta1": 0.9,
   "adam_beta2": 0.999,
   "adam_epsilon": 1e-07,
@@ -31,6 +31,8 @@
   "value_loss_weight": 0.2,
   "reward_loss_weight": 4.0,
   "player_loss_weight": 4.0,
+  "value_entropy_weight": 0.1,
+  "reward_entropy_weight": 0.1,
   "hand_loss_weight": 0.1,
   "policy_loss_weight": 1.0,
   "valid_policy_target": false,
