--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -56,6 +56,7 @@
   "apa_n_games": 1
  },
  "network": {
+  "fully_connected": true,
   "action_space_size": 43,
   "fc_hand_layers": [
    36
@@ -64,19 +65,19 @@
    18
   ],
   "fc_policy_layers": [
-   256, 256, 256
+   256
   ],
   "fc_reward_layers": [
-   256, 256, 256
+   256
   ],
   "fc_value_layers": [
-   256, 256, 256
+   256
   ],
   "feature_extractor": "cnn-full",
-  "num_blocks_representation": 4,
-  "fcn_blocks_representation": 2,
-  "num_blocks_dynamics": 4,
-  "fcn_blocks_dynamics": 2,
+  "num_blocks_representation": 8,
+  "fcn_blocks_representation": 0,
+  "num_blocks_dynamics": 8,
+  "fcn_blocks_dynamics": 0,
   "num_blocks_prediction": 0,
   "num_channels": 256,
   "path": null,
