--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -40,6 +40,7 @@
   "use_per": false,
   "mask_private": false,
   "mask_valid": false,
+  "value_mse": true,
   "max_buffer_size": 20000,
   "min_buffer_size": 20000,
   "max_samples_per_episode": 512,
@@ -56,7 +57,7 @@
   "apa_n_games": 1
  },
  "network": {
-  "fully_connected": true,
+  "fully_connected": false,
   "action_space_size": 43,
   "fc_hand_layers": [
    36
@@ -74,12 +75,12 @@
    256, 256, 256
   ],
   "feature_extractor": "cnn-full",
-  "num_blocks_representation": 16,
-  "fcn_blocks_representation": 0,
-  "num_blocks_dynamics": 16,
-  "fcn_blocks_dynamics": 0,
+  "num_blocks_representation": 4,
+  "fcn_blocks_representation": 2,
+  "num_blocks_dynamics": 4,
+  "fcn_blocks_dynamics": 2,
   "num_blocks_prediction": 0,
-  "num_channels": 512,
+  "num_channels": 128,
   "path": null,
   "players": 4,
   "reduced_channels_policy": 64,
