--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -29,8 +29,9 @@
   "batch_size": 256,
   "data_folder": "../results",
   "value_loss_weight": 0.001,
-  "reward_loss_weight": 4.0,
+  "reward_loss_weight": 0.01,
   "player_loss_weight": 4.0,
+  "is_terminal_loss_weight": 4.0,
   "value_entropy_weight": 0.00,
   "reward_entropy_weight": 0.00,
   "hand_loss_weight": 0.01,
@@ -61,6 +62,9 @@
   "action_space_size": 43,
   "fc_hand_layers": [
    36
+  ],
+  "fc_terminal_state_layers": [
+   18
   ],
   "fc_player_layers": [
    18
