--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -29,8 +29,8 @@
   "batch_size": 256,
   "data_folder": "../results",
   "value_loss_weight": 0.001,
-  "reward_loss_weight": 0.01,
-  "is_terminal_loss_weight": 0.01,
+  "reward_loss_weight": 4.0,
+  "is_terminal_loss_weight": 1.0,
   "player_loss_weight": 4.0,
   "value_entropy_weight": 0.00,
   "reward_entropy_weight": 0.00,
@@ -42,6 +42,7 @@
   "mask_private": false,
   "mask_valid": false,
   "value_mse": true,
+  "reward_mse": false,
   "max_buffer_size": 20000,
   "min_buffer_size": 20000,
   "max_samples_per_episode": 512,
