no mdp value again

--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -11,7 +11,7 @@
   "dirichlet_alpha": 0.3,
   "dirichlet_eps": 0.25,
   "iterations": 50,
-  "mdp_value": true,
+  "mdp_value": false,
   "discount": 1,
   "n_search_threads": 3,
   "virtual_loss": 10,
@@ -30,8 +30,8 @@
   "data_folder": "../results",
   "value_loss_weight": 0.001,
   "reward_loss_weight": 10.0,
-  "is_terminal_loss_weight": 10.0,
-  "player_loss_weight": 10.0,
+  "is_terminal_loss_weight": 100.0,
+  "player_loss_weight": 100.0,
   "value_entropy_weight": 0.00,
   "reward_entropy_weight": 0.00,
   "hand_loss_weight": 1.0,
@@ -49,8 +49,8 @@
   "min_non_zero_prob_samples": 10000,
   "port": 8080,
   "store_model_weights_after": 10,
-  "max_trajectory_length": 20,
-  "min_trajectory_length": 20,
+  "max_trajectory_length": 10,
+  "min_trajectory_length": 10,
   "updates_per_step": 16,
   "iterations": 1000000,
   "weight_decay": 0.00001,
