--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,5 +1,5 @@
 {
- "timestamp": 1649334860,
+ "timestamp": 1649334850,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
@@ -10,11 +10,11 @@
   "c_2": 19652,
   "dirichlet_alpha": 0.3,
   "dirichlet_eps": 0.25,
-  "iterations": 50,
+  "iterations": 20,
   "mdp_value": false,
   "discount": 1,
-  "n_search_threads": 3,
-  "virtual_loss": 10,
+  "n_search_threads": 1,
+  "virtual_loss": 1,
   "port": 9999,
   "temperature": 1.0,
   "threads_to_use": 4,
@@ -38,13 +38,13 @@
   "policy_loss_weight": 10.0,
   "dldl": false,
   "valid_policy_target": false,
-  "use_per": false,
+  "use_per": true,
   "mask_private": false,
   "mask_valid": false,
   "value_mse": true,
   "reward_mse": false,
-  "max_buffer_size": 20000,
-  "min_buffer_size": 20000,
+  "max_buffer_size": 100000,
+  "min_buffer_size": 100000,
   "max_samples_per_episode": 512,
   "min_non_zero_prob_samples": 10000,
   "port": 8080,
