--- a/scripts/settings-debug.json
+++ b/scripts/settings-debug.json
@@ -1,4 +1,5 @@
 {
+ "timestamp": 1649334850,
  "log": {
   "projectname": "jass-muzero",
   "entity": "andrinburli",
@@ -23,47 +24,46 @@
   "adam_beta1": 0.9,
   "adam_beta2": 0.999,
   "adam_epsilon": 1e-07,
-  "batch_size": 2,
+  "batch_size": 32,
   "data_folder": "../results",
   "value_loss_weight": 0.25,
   "reward_loss_weight": 1.0,
   "policy_loss_weight": 1.0,
+  "valid_policy_target": false,
+  "dldl": false,
+  "value_mse": true,
   "learning_rate": 0.0001,
   "max_buffer_size": 1024,
   "min_buffer_size": 4,
   "port": 8080,
   "store_model_weights_after": 5,
-  "trajectory_length": 5,
+  "max_trajectory_length": 10,
+  "min_trajectory_length": 10,
   "updates_per_step": 2,
-  "iterations": 1000000,
+  "iterations": 10,
   "weight_decay": 0.0001
  },
  "network": {
+  "fully_connected": false,
   "action_space_size": 43,
-  "fc_policy_layers": [
-   256
-  ],
-  "fc_reward_layers": [
-   256
-  ],
-  "fc_value_layers": [
-   256
-  ],
+  "fc_hand_layers": [ ],
+  "fc_terminal_state_layers": [ ],
+  "fc_player_layers": [ ],
+  "fc_policy_layers": [ 256 ],
+  "fc_reward_layers": [ 256 ],
+  "fc_value_layers": [ 256 ],
   "feature_extractor": "cnn-full",
-  "num_blocks_representation": 2,
-  "num_blocks_dynamics": 2,
-  "num_blocks_prediction": 1,
-  "num_channels": 256,
-  "observation_shape": [
-   4,
-   9,
-   45
-  ],
+  "num_blocks_representation": 16,
+  "fcn_blocks_representation": 0,
+  "num_blocks_dynamics": 16,
+  "fcn_blocks_dynamics": 0,
+  "num_blocks_prediction": 0,
+  "num_channels": 128,
   "path": null,
   "players": 4,
-  "reduced_channels_policy": 128,
-  "reduced_channels_reward": 128,
-  "reduced_channels_value": 1,
+  "reduced_channels_policy": 64,
+  "reduced_channels_reward": 64,
+  "reduced_channels_value": 64,
   "support_size": 157,
   "type": "resnet"
  }
