add cosine scheduler

--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -10,7 +10,7 @@
   "c_2": 19652,
   "dirichlet_alpha": 0.3,
   "dirichlet_eps": 0.25,
-  "iterations": 20,
+  "iterations": 50,
   "mdp_value": false,
   "discount": 1,
   "n_search_threads": 1,
@@ -23,6 +23,7 @@
  "optimization": {
   "optimizer": "adam",
   "learning_rate": 0.0005,
+  "learning_rate_init": 0.0001,
   "adam_beta1": 0.9,
   "adam_beta2": 0.999,
   "adam_epsilon": 1e-07,
@@ -45,15 +46,15 @@
   "reward_mse": false,
   "max_buffer_size": 100000,
   "min_buffer_size": 100000,
-  "max_samples_per_episode": 512,
+  "max_samples_per_episode": 1024,
   "min_non_zero_prob_samples": 10000,
   "port": 8080,
   "store_model_weights_after": 10,
-  "max_trajectory_length": 10,
-  "min_trajectory_length": 10,
+  "max_trajectory_length": 5,
+  "min_trajectory_length": 5,
   "updates_per_step": 16,
-  "iterations": 1000000,
-  "weight_decay": 0.00001,
+  "total_steps": 1000000,
+  "weight_decay": 0.0001,
   "store_buffer": true,
   "log_n_steps_ahead": 15,
   "apa_n_games": 1
