--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,27 +17,32 @@ services:
                   device_ids: ['0']
                   capabilities: [gpu]
 
-    evaluate_agents:
+    oos:
         build: .
         volumes:
             - .:/app
         command: >
-            bash -c "cd scripts/evaluation && python evaluate_agents.py
-            --max_parallel_processes 8,
-            --skip_on_result_file True,
-            --use_python True,
-            --file imperfect_info_evaluate_agents.json"
-        deploy:
-          resources:
-            reservations:
-              devices:
-                - driver: nvidia
-                  device_ids: ['0']
-                  capabilities: [gpu]
+            bash -c "cd scripts && python train_oos_strategy.py
+            --log"
+
+    agent_play:
+      build: .
+      volumes:
+        - .:/app
+      command: >
+        bash -c "cd scripts/analyse && python agent_play.py"
+      deploy:
+        resources:
+          reservations:
+            devices:
+              - driver: nvidia
+                device_ids: ['0']
+                capabilities: [gpu]
 
     baselines:
         build: .
         ports:
+          - 9899:9899
           - 9898:9898
           - 9897:9897
           - 9896:9896
