--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -58,7 +58,8 @@
   "store_buffer": true,
   "log_n_steps_ahead": 15,
   "apa_n_games": 1,
-  "log_gradients": false
+  "log_gradients": false,
+  "restore_buffer_tree_from_file": true
  },
  "network": {
   "fully_connected": false,
