--- a/scripts/analyse/play/oos_sweep2.yaml
+++ b/scripts/analyse/play/oos_sweep2.yaml
@@ -9,6 +9,6 @@ parameters:
   epsilon:
     values: [0.2, 0.4, 0.6, 0.7, 0.8, 0.9, 1.0]
   iterations1:
-    values: 1000
+    values: [1000]
   n_games:
-    values: 100
+    values: [100]
