--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,9 +1,8 @@
 {
- "timestamp": 1649334850,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
-  "group": "MuZero-MCTS-Experiment-1"
+  "group": "MuZero-MCTS-Experiment-2"
  },
  "agent": {
   "c_1": 1.25,
@@ -11,23 +10,23 @@
   "dirichlet_alpha": 0.3,
   "dirichlet_eps": 0.25,
   "iterations": 50,
-  "mdp_value": false,
+  "mdp_value": true,
   "discount": 1,
-  "n_search_threads": 1,
-  "virtual_loss": 1,
+  "n_search_threads": 3,
+  "virtual_loss": 10,
   "port": 9999,
   "temperature": 1.0,
-  "threads_to_use": 4,
   "type": "mu-zero-mcts"
  },
  "optimization": {
+  "reanalyse_fraction": 1.0,
   "optimizer": "adam",
   "learning_rate": 0.0005,
-  "learning_rate_init": 0.001,
+  "learning_rate_init": 0.0001,
   "adam_beta1": 0.9,
   "adam_beta2": 0.999,
   "adam_epsilon": 1e-07,
-  "batch_size": 512,
+  "batch_size": 256,
   "data_folder": "../results",
   "value_loss_weight": 0.01,
   "reward_loss_weight": 10.0,
@@ -39,13 +38,13 @@
   "policy_loss_weight": 10.0,
   "dldl": false,
   "valid_policy_target": false,
-  "use_per": true,
+  "use_per": false,
   "mask_private": false,
   "mask_valid": false,
   "value_mse": true,
   "reward_mse": false,
-  "max_buffer_size": 100000,
-  "min_buffer_size": 100000,
+  "max_buffer_size": 10000,
+  "min_buffer_size": 10000,
   "max_samples_per_episode": 512,
   "min_non_zero_prob_samples": 10000,
   "port": 8080,
@@ -54,7 +53,7 @@
   "min_trajectory_length": 10,
   "updates_per_step": 10,
   "total_steps": 1000000,
-  "weight_decay": 0.00001,
+  "weight_decay": 0.0001,
   "store_buffer": true,
   "log_n_steps_ahead": 15,
   "apa_n_games": 1,
