--- a/resources/data_collectors/ws01.yaml
+++ b/resources/data_collectors/ws01.yaml
@@ -4,6 +4,7 @@ services:
         build: ../../
         volumes:
             - ../../:/app
+            - ../../../jass-train-py/data/conv_observation_full_0.75_quantile:/data
         environment:
             - NVIDIA_VISIBLE_DEVICES=0
         network_mode: host
@@ -11,6 +12,7 @@ services:
             bash -c "cd scripts && python collect_n_send_game_data.py
             --host http://10.180.39.13
             --max_parallel_processes 6
+            --max_parallel_threads 32
             --min_states_to_send 1"
 
 
@@ -19,6 +21,7 @@ services:
         build: ../../
         volumes:
             - ../../:/app
+            - ../../../jass-train-py/data/conv_observation_full_0.75_quantile:/data
         environment:
             - NVIDIA_VISIBLE_DEVICES=1
         network_mode: host
@@ -26,4 +29,5 @@ services:
             bash -c "cd scripts && python collect_n_send_game_data.py
             --host http://10.180.39.13
             --max_parallel_processes 6
+            --max_parallel_threads 32
             --min_states_to_send 1"
