--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,4 +1,5 @@
 {
+ "timestamp": 1652358141,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
@@ -41,6 +42,7 @@
   "use_per": false,
   "mask_private": false,
   "mask_valid": false,
+  "value_td_5_step": true,
   "value_mse": true,
   "reward_mse": false,
   "max_buffer_size": 10000,
@@ -51,6 +53,7 @@
   "store_model_weights_after": 50,
   "max_trajectory_length": 15,
   "min_trajectory_length": 15,
+  "target_network_update": 100,
   "updates_per_step": 10,
   "total_steps": 1000000,
   "weight_decay": 0.0001,
