--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,4 +1,5 @@
 {
+ "timestamp": 1652448054,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
@@ -45,7 +46,7 @@
   "value_mse": false,
   "reward_mse": false,
   "max_buffer_size": 10000,
-  "min_buffer_size": 10000,
+  "min_buffer_size": 5000,
   "max_samples_per_episode": 512,
   "min_non_zero_prob_samples": 10000,
   "port": 8080,
