implement value based per

--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -39,10 +39,11 @@
   "policy_loss_weight": 1.0,
   "dldl": false,
   "valid_policy_target": false,
-  "use_per": false,
+  "use_per": true,
+  "value_based_per": true,
   "mask_private": false,
   "mask_valid": false,
-  "value_td_5_step": false,
+  "value_td_5_step": true,
   "value_mse": false,
   "reward_mse": false,
   "max_buffer_size": 10000,
