add supervised training targets

--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -44,7 +44,7 @@
   "value_based_per": true,
   "mask_private": false,
   "mask_valid": false,
-  "value_td_5_step": true,
+  "value_td_5_step": false,
   "value_mse": false,
   "reward_mse": false,
   "max_buffer_size": 40000,
