--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -68,24 +68,24 @@
  "network": {
   "fully_connected": false,
   "action_space_size": 43,
-  "fc_hand_layers": [ ],
-  "fc_terminal_state_layers": [ ],
-  "fc_player_layers": [ ],
+  "fc_hand_layers": [ 256 ],
+  "fc_terminal_state_layers": [ 256 ],
+  "fc_player_layers": [ 256 ],
   "fc_policy_layers": [ 256 ],
   "fc_reward_layers": [ 256 ],
   "fc_value_layers": [ 256 ],
   "feature_extractor": "cnn-full",
-  "num_blocks_representation": 4,
-  "fcn_blocks_representation": 2,
-  "num_blocks_dynamics": 4,
-  "fcn_blocks_dynamics": 2,
+  "num_blocks_representation": 20,
+  "fcn_blocks_representation": 0,
+  "num_blocks_dynamics": 20,
+  "fcn_blocks_dynamics": 0,
   "num_blocks_prediction": 0,
-  "num_channels": 128,
+  "num_channels": 256,
   "path": null,
   "players": 4,
-  "reduced_channels_policy": 64,
-  "reduced_channels_reward": 64,
-  "reduced_channels_value": 64,
+  "reduced_channels_policy": 16,
+  "reduced_channels_reward": 16,
+  "reduced_channels_value": 16,
   "support_size": 200,
   "type": "resnet"
  }
