--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -10,7 +10,7 @@
   "dirichlet_alpha": 0.3,
   "dirichlet_eps": 0.25,
   "iterations": 50,
-  "mdp_value": true,
+  "mdp_value": false,
   "discount": 1,
   "n_search_threads": 1,
   "virtual_loss": 1,
@@ -28,7 +28,7 @@
   "adam_epsilon": 1e-07,
   "batch_size": 256,
   "data_folder": "../results",
-  "value_loss_weight": 0.1,
+  "value_loss_weight": 0.001,
   "reward_loss_weight": 10.0,
   "is_terminal_loss_weight": 10.0,
   "player_loss_weight": 10.0,
@@ -44,7 +44,7 @@
   "mask_private": false,
   "mask_valid": false,
   "value_td_5_step": false,
-  "value_mse": false,
+  "value_mse": true,
   "reward_mse": false,
   "max_buffer_size": 40000,
   "min_buffer_size": 20000,
