--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -68,17 +68,17 @@
  "network": {
   "fully_connected": false,
   "action_space_size": 43,
-  "fc_hand_layers": [ 256 ],
-  "fc_terminal_state_layers": [ 256 ],
+  "fc_hand_layers": [ ],
+  "fc_terminal_state_layers": [ ],
   "fc_player_layers": [ 256 ],
   "fc_policy_layers": [ 512 ],
   "fc_reward_layers": [ 512 ],
   "fc_value_layers": [ 512 ],
   "feature_extractor": "cnn-full",
-  "num_blocks_representation": 10,
-  "fcn_blocks_representation": 0,
-  "num_blocks_dynamics": 10,
-  "fcn_blocks_dynamics": 0,
+  "num_blocks_representation": 4,
+  "fcn_blocks_representation": 2,
+  "num_blocks_dynamics": 4,
+  "fcn_blocks_dynamics": 2,
   "num_blocks_prediction": 0,
   "num_channels": 128,
   "path": null,
