--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,4 +1,5 @@
 {
+ "timestamp": 1653054564,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
@@ -26,15 +27,15 @@
   "adam_beta1": 0.9,
   "adam_beta2": 0.999,
   "adam_epsilon": 1e-07,
-  "batch_size": 128,
+  "batch_size": 512,
   "data_folder": "../results",
-  "value_loss_weight": 0.1,
-  "reward_loss_weight": 10.0,
-  "is_terminal_loss_weight": 10.0,
-  "player_loss_weight": 10.0,
+  "value_loss_weight": 0.05,
+  "reward_loss_weight": 0.25,
+  "is_terminal_loss_weight": 1.0,
+  "player_loss_weight": 0.25,
   "value_entropy_weight": 0.00,
   "reward_entropy_weight": 0.00,
-  "hand_loss_weight": 0.01,
+  "hand_loss_weight": 0.001,
   "policy_loss_weight": 1.0,
   "dldl": false,
   "valid_policy_target": false,
