--- a/resources/data_collectors/hs01.yml
+++ b/resources/data_collectors/hs01.yml
@@ -4,17 +4,12 @@ services:
         build: ../../
         volumes:
             - ../../:/app
+            - ../../../jass-train-py/data/conv_observation_full_0.75_quantile:/data
         network_mode: host
         command: >
             bash -c "cd scripts && python collect_n_send_game_data.py
             --host http://10.180.39.13
-            --max_parallel_processes 4
+            --max_parallel_processes 16
+            --max_parallel_threads 2
             --min_states_to_send 1"
-        deploy:
-          resources:
-            reservations:
-              devices:
-                - driver: nvidia
-                  device_ids: ['0']
-                  capabilities: [gpu]
 
