--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,4 +1,5 @@
 {
+ "timestamp": 1654151710,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
@@ -11,6 +12,8 @@
   "dirichlet_eps": 0.25,
   "iterations": 50,
   "mdp_value": true,
+  "player_func": true,
+  "terminal_func": true,
   "discount": 1,
   "virtual_loss": 1,
   "temperature": 1.0,
