--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -12,8 +12,8 @@
   "dirichlet_eps": 0.25,
   "iterations": 50,
   "mdp_value": true,
-  "player_func": true,
-  "terminal_func": true,
+  "player_func": false,
+  "terminal_func": false,
   "discount": 1,
   "virtual_loss": 1,
   "temperature": 1.0,
