--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -56,6 +56,7 @@
   "min_trajectory_length": 10,
   "target_network_update": 100,
   "updates_per_step": 10,
+  "max_steps_per_second": 0.4,
   "total_steps": 100000,
   "weight_decay": 0.0001,
   "store_buffer": true,
