--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,8 +1,9 @@
 {
+ "timestamp": 2053237674,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
-  "group": "MuZero-MCTS-Experiment-2"
+  "group": "MuZero-MCTS-Experiment-4"
  },
  "agent": {
   "c_1": 1.25,
@@ -19,7 +20,7 @@
   "type": "mu-zero-mcts"
  },
  "optimization": {
-  "reanalyse_fraction": 1.0,
+  "reanalyse_fraction": 0.0,
   "optimizer": "adam",
   "learning_rate_init": 0.001,
   "adam_beta1": 0.9,
@@ -42,7 +43,7 @@
   "value_based_per": false,
   "mask_private": false,
   "mask_valid": false,
-  "value_td_5_step": true,
+  "value_td_5_step": false,
   "value_mse": false,
   "reward_mse": false,
   "max_buffer_size": 40000,
