--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -16,6 +16,7 @@
   "terminal_func": false,
   "discount": 1,
   "virtual_loss": 1,
+  "n_search_threads": 1,
   "temperature": 0.05,
   "type": "mu-zero-mcts"
  },
@@ -56,7 +57,7 @@
   "min_trajectory_length": 10,
   "target_network_update": 100,
   "updates_per_step": 10,
-  "max_steps_per_second": 0.5,
+  "max_steps_per_second": 1.0,
   "total_steps": 100000,
   "weight_decay": 0.0001,
   "store_buffer": true,
