--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,8 +1,9 @@
 {
+ "timestamp": 2053239245,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
-  "group": "MuZero-MCTS-Experiment-0"
+  "group": "MuZero-MCTS-Experiment-4"
  },
  "agent": {
   "c_1": 1.25,
@@ -16,7 +17,7 @@
   "discount": 1,
   "virtual_loss": 1,
   "n_search_threads": 1,
-  "temperature": 1.0,
+  "temperature": 0.25,
   "type": "mu-zero-mcts"
  },
  "optimization": {
@@ -76,7 +77,7 @@
   "fc_policy_layers": [ 512 ],
   "fc_reward_layers": [ 512 ],
   "fc_value_layers": [ 512 ],
-  "feature_extractor": "cnn-full-cheating",
+  "feature_extractor": "cnn-full",
   "num_blocks_representation": 5,
   "fcn_blocks_representation": 0,
   "num_blocks_dynamics": 5,
