--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ wandb==0.12.4
 memory-profiler==0.58.0
 matplotlib==3.3.4
 tensorflow==2.7
+tensorflow-probability==0.15.0
 tensorflow-addons==0.16.1
 scipy==1.5.4
+sklearn
 tqdm
