--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.tfrecord filter=lfs diff=lfs merge=lfs -text
 *.pb filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
+notebooks/** linguist-vendored
